# repro_windows_failure

./: Cargo.toml  build.rs  data.c  data.h
benches/: my_benches.rs
src/: bindings.rs  lib.rs
